[project]
name = 'linkrottie'
description = 'Git repository backup tool with submodule support'
readme = 'README.rst'
authors = [
  {name = "Rob Gaddi", email = "rgaddi@highlandtechnology.com"},
]
license = 'GPL-3.0-or-later'

dynamic = ["version"]
dependencies = [
  "requests>2.31.0"
]

[project.optional-dependencies]
test = ["pytest>=8.3"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "linkrottie.__version__"}

[tool.setuptools.packages]
find = {}
